--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,105 @@
 .App {
-  text-align: center;
+  background: pink;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.app-right-section {
+  width: 100%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.sidebar {
+  height: 100vh;
+  width: 25%;
+  background-color: darkblue;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.top-bar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 50px;
+  background-color: darkblue;
+  padding-left: 8px;
+  padding-right: 8px;
+  color: wheat;
+}
+
+.circle {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  border: 1px solid black;
+  height: 25px;
+  width: 25px;
+  cursor: pointer;
+  font-weight: 700;
+}
+
+.flex-row-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.flex-column-center {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.w-icons {
+  width: 100px;
+  height: 100px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.text-w-1 {
+  font-weight: 600;
+  font-size: 20px;
+}
+
+.text-w-2 {
+  font-weight: 600;
+  font-size: 30px;
+}
+
+.text-w-3 {
+  font-weight: 600;
+  font-size: 40px;
+}
+
+.text-w-4 {
+  font-weight: 600;
+  font-size: 60px;
+}
+
+.mt-1 {
+  margin-top: 10px;
+}
+
+.mt-2 {
+  margin-top: 20px;
+}
+
+.mt-3 {
+  margin-top: 30px;
+}
+
+.mt-4 {
+  margin-top: 40px;
+}
+
+.p-0{
+  padding: 10px;
+}
+
+.p-1{
+  padding: 20px;
+}
+
+.p-2{
+  padding: 30px;
 }
